--- a/x11-clocks/dclock/Makefile
+++ b/x11-clocks/dclock/Makefile
@@ -3,20 +3,18 @@
 # Date created:		15 Aug 1996
 # Whom:			David Leonard <leonard@dstc.edu.au>
 #
-# $Id: Makefile,v 1.1.1.1 1996/08/16 07:39:56 asami Exp $
+# $Id: Makefile,v 1.2 1996/11/18 11:42:53 asami Exp $
 #
 
 DISTNAME=	dclock
 PKGNAME=	dclock-pl4
 CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.ucs.ubc.ca/pub/old/X11/contrib/ \
-		ftp://pdq.coe.montana.edu/pub/mirrors/X11-contrib/ \
-		ftp://ftp.pasteur.fr/pub/computing/unix/X11/R5contrib/
-EXTRACT_SUFX=	.shar.gz
+MASTER_SITES=	ftp://ftp.x.org/R5contrib/
+EXTRACT_SUFX=	.shar.Z
 
 MAINTAINER=	ports@FreeBSD.ORG
 
-EXTRACT_CMD=		gzip 
+EXTRACT_CMD=		${GZIP_CMD}
 EXTRACT_BEFORE_ARGS=	-dc
 EXTRACT_AFTER_ARGS=	|sh -
 NO_WRKSUBDIR=		yes
