--- a/lang/rexx-imc/Makefile
+++ b/lang/rexx-imc/Makefile
@@ -3,7 +3,7 @@
 # Date created:				Septermber 21 96
 # Whom:	      				James FitzGibbon <jfitz@FreeBSD.org>
 #
-#   $Id: Makefile,v 1.2 1996/11/12 02:19:01 obrien Exp $
+# $Id: Makefile,v 1.3 1997/07/17 15:12:49 max Exp $
 #
 
 DISTNAME=	rexx-imc-1.6d
@@ -18,7 +18,7 @@ pre-build:
 		@ ${CP} ${FILESDIR}/Makefile ${WRKDIR}
 
 do-install:
-		@strip ${WRKDIR}/librexx.so.1.6.4 ${WRKDIR}/rxmathfn.rxfn		
+		@strip ${WRKDIR}/librexx.so.1.6.4 ${WRKDIR}/rxmathfn.rxfn
 		@ for file in rexx rxque rxstack; do \
 			${INSTALL_PROGRAM} ${WRKDIR}/$$file ${PREFIX}/bin; \
 		done
@@ -28,12 +28,13 @@ do-install:
 		@ for file in librexx.a librexx.so.1.6.4; do \
 			${INSTALL_DATA} ${WRKDIR}/$$file ${PREFIX}/lib; \
 		done
+		@(${INSTALL_DATA} ${WRKDIR}/rexxsaa.h ${PREFIX}/include)
 .ifndef(NOPORTDOCS)
-		@ ${MKDIR} -p ${PREFIX}/share/doc/rexx-imc/
+		@ ${MKDIR} ${PREFIX}/share/doc/rexx-imc/
 		@ for file in README README.avail README.bugreport README.docs README.files README.make README.news README.versions rexx.info rexx.ref rexx.summary rexx.tech; do \
 			${INSTALL_DATA} ${WRKDIR}/$$file ${PREFIX}/share/doc/rexx-imc/; \
 		done
-.endif		
+.endif
 
 post-install:
 		@ ${LDCONFIG} -m ${PREFIX}/lib
