--- a/korean/hanterm/Makefile
+++ b/korean/hanterm/Makefile
@@ -1,20 +1,21 @@
-# New ports collection makefile for:	hanterm304beta6p1
-# Version required:     3.04beta6p1
+# New ports collection makefile for:	hanterm3.04
+# Version required:     3.04beta7
 # Date created:		12 Mar 1997
 # Whom:			CHOI Junho <junker@jazz.snu.ac.kr>
 #
-# $Id: Makefile,v 1.2 1997/09/22 16:21:47 max Exp $
+# $Id: Makefile,v 1.3 1998/03/16 07:17:40 steve Exp $
 #
 
-DISTNAME=	hanterm304beta6p1
-PKGNAME=	ko-hanterm-3.04b6.1
+DISTNAME=	hanterm304beta7
+PKGNAME=	ko-hanterm-3.04b7
 CATEGORIES=	korean x11
-MASTER_SITES=	ftp://ftp.kaist.ac.kr/pub/hangul/terminal/hanterm/hanterm304beta/ \
+MASTER_SITES=	ftp://ftp.kaist.ac.kr/pub/hangul/incoming/hantermbeta7/ \
+		ftp://ftp.kaist.ac.kr/pub/hangul/terminal/hanterm/hanterm304beta/ \
 		ftp://ftp.kreonet.re.kr/pub/hangul/cair-archive/terminal/hanterm/hanterm304beta/
 
 MAINTAINER=	junker@jazz.snu.ac.kr
 
-RUN_DEPENDS=	${PREFIX}/lib/X11/fonts/korean/johab:${PORTSDIR}/korean/johabfonts
+RUN_DEPENDS=	${PREFIX}/lib/X11/fonts/misc/johabm16.pcf.gz:${PORTSDIR}/korean/johabfonts
 
 USE_IMAKE=	yes
 NO_INSTALL_MANPAGES= yes
