--- a/misc/xdelta/Makefile
+++ b/misc/xdelta/Makefile
@@ -3,7 +3,7 @@
 # Date created:         Sun May  4 21:40:06 CDT 1997
 # Whom:                 jmacd
 #
-# $Id: Makefile,v 1.7 1998/04/23 07:08:10 jmacd Exp $
+# $Id: Makefile,v 1.8 1998/04/30 02:03:14 asami Exp $
 #
 
 DISTNAME=       xdelta-0.18
@@ -15,9 +15,6 @@ MAINTAINER=	jmacd@FreeBSD.ORG
 BUILD_DEPENDS=	${PREFIX}/lib/libgdbm.a:${PORTSDIR}/databases/gdbm
 
 GNU_CONFIGURE=	yup
-#
-# this seems to be necessary for libtool :(
-MAKE_ENV= CC=cc
 CONFIGURE_ENV= CPPFLAGS="-I${LOCALBASE}/include" \
 	LIBS=-L${LOCALBASE}/lib INSTALL_SCRIPT='$${INSTALL} -m 755'
 MAN1=           xdelta.1
