--- a/devel/automake15/Makefile
+++ b/devel/automake15/Makefile
@@ -1,12 +1,12 @@
 # New ports collection makefile for:	automake
-# Version required:	1.2
+# Version required:	1.3
 # Date created:		15 March 1997
 # Whom:			FUJIMOTO Kensaku <fujimoto@oscar.elec.waseda.ac.jp>
 #
-# $Id: Makefile,v 1.4 1997/09/19 07:13:28 tg Exp $
+# $Id: Makefile,v 1.5 1997/09/19 09:29:04 max Exp $
 #
 
-DISTNAME=	automake-1.2
+DISTNAME=	automake-1.3
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GNU}
 
