--- a/x11-toolkits/xview/Makefile
+++ b/x11-toolkits/xview/Makefile
@@ -3,13 +3,15 @@
 # Date created:         22 November 1994
 # Whom:                 ljo
 #
-# $Id: Makefile,v 1.7 1996/11/16 10:49:57 asami Exp $
+# $Id: Makefile,v 1.8 1997/10/28 12:28:08 tg Exp $
 #
 
-DISTNAME=	xview-config-3.2.1
+DISTNAME=	xview3.2p1-X11R6
+PKGNAME=	xview-config-3.2.1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_LOCAL}
-DISTFILES=	xview3.2p1-X11R6.tar.gz
+
+MAINTAINER=	ports@FreeBSD.ORG
 
 WRKSRC=      	${WRKDIR}/xview3.2p1-X11R6/config
 USE_IMAKE=	yes
