--- a/news/Makefile
+++ b/news/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.32 1997/11/16 04:58:09 fenner Exp $
+# $Id: Makefile,v 1.33 1998/03/28 14:59:28 steve Exp $
 #
 
     SUBDIR += aub
@@ -14,6 +14,7 @@
     SUBDIR += nntp
     SUBDIR += nntpbtr
     SUBDIR += nntpcache
+    SUBDIR += p5-News-Article
     SUBDIR += plor
     SUBDIR += rkive
     SUBDIR += slnr
